# Audio-SpectraCLI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Contributing.md  Dockerfile  LICENSE  Readme.md  app.py  index.bat  index.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: docker-publish.yml  label.yml  python-publish.yml
Audio_SpectraCLI/: __init__.py  main.py  main_pyqt5.py
Audio_SpectraCLI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
audio_spectrum/: __init__.py  spectrum.py
audiospectra-cli/: CHANGELOG.md  README.md  audio-spectracli-extension-4.1.0.vsix  esbuild.js  package-lock.json  package.json  sample.py  tsconfig.json
audiospectra-cli/src/: extension.ts
audiospectra-cli/src/test/: extension.test.ts
recipes/audio-spectracli/: meta.yaml
tests/: main.py  test-old.py  test.py
