[metadata]
name = Audio-SpectraCLI
version = 2.2
author = Aditya Seth
author_email = setha4195@gmail.com
description = AudioSpectraCLI is a command-line tool that provides real-time FFT visualization of audio spectra. It captures audio input from the microphone and displays the corresponding frequency spectrum directly in the terminal window, allowing users to monitor and analyze audio signals without the need for graphical interfaces.
license = MIT
home-page = https://github.com/AdityaSeth777/Audio-SpectraCLI