[metadata]
name = Audio-SpectraCLI
version = 4.1.0
author = Aditya Seth
author_email = contact@adityaseth.in
description = AudioSpectraCLI is a tool that provides real-time FFT visualization of audio spectra. It captures audio input from the microphone and displays the corresponding frequency spectrum directly, allowing users to monitor and analyze audio signals.
license = Apache License 2.0
home-page = https://github.com/AdityaSeth777/Audio-SpectraCLI